--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -3,27 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainActivity.MainActivity"
+    tools:context=".mainActivity3.MainActivity3"
     android:orientation="vertical">
 
+
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/space"
         android:layout_alignParentStart="true"
         android:layout_margin="15dp"
-        android:text="ACTIVITY 2"
+        android:text="ACTIVITY 1"
         android:onClick="onClickStartAnotherActivity"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignStart="@+id/space"
         android:layout_margin="15dp"
-        android:text="ACTIVITY 3"
+        android:text="ACTIVITY 2"
         android:onClick="onClickStartAnotherActivity"/>
 
     <Space
@@ -31,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true" />
+
 
     <TextView
         android:id="@+id/count"
